# orbitutils

./: CMakeLists.txt  README
include/: kepler.h  lambert.h  mathutils.h  oeconvert.h  orbitalelements.h
src/: kepler.cpp  lambert.cpp  oeconvert.cpp
test/: test-kepler.cpp  test-lambert.cpp  test-oeconvert.cpp
